Fix accessibility contrast and label errors

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,6 @@
 .heading {
   text-align: center;
   font-size: 5rem;
-  -webkit-text-stroke: 1px black;
+  color: black;
+  background-color: white;
 }
